--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ table {
     padding: 8px 10px;
   }
   
-  td:last-of-type {
+  /* td:last-of-type {
     text-align: center;
-  }
+  } */
   
   tbody > tr:nth-of-type(even) {
     background-color: rgb(237 238 242);
